[package]
name = "project_euler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "problem001"
path = "src/bin/problem001/main.rs"

[[bin]]
name = "problem002"
path = "src/bin/problem002/main.rs"

[[bin]]
name = "problem003"
path = "src/bin/problem003/main.rs"


[dependencies]
