[package]
name = "project_euler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "problem001"
path = "src/bin/problem001/main.rs"

[[bin]]
name = "problem002"
path = "src/bin/problem002/main.rs"

[[bin]]
name = "problem003"
path = "src/bin/problem003/main.rs"

[[bin]]
name = "problem004"
path = "src/bin/problem004/main.rs"

[[bin]]
name = "problem005"
path = "src/bin/problem005/main.rs"

[[bin]]
name = "problem006"
path = "src/bin/problem006/main.rs"

[[bin]]
name = "problem007"
path = "src/bin/problem007/main.rs"

[[bin]]
name = "problem008"
path = "src/bin/problem008/main.rs"

[[bin]]
name = "problem064"
path = "src/bin/problem064/main.rs"

[[bin]]
name = "problem065"
path = "src/bin/problem065/main.rs"

[[bin]]
name = "problem066"
path = "src/bin/problem066/main.rs"

[dependencies]
